--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">JeuxPendu</string>
     <string name="send">Valider</string>
     <string name="Rejouer">Rejouer</string>
+    <string name = "btn_jouer">Jouer</string>
 </resources>
